test/files/neg/t12730.scala

trait T {
  def f = 42.formatted()
}
